--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="links">
             <a href="#"><img src="./Icons/facebook.svg" alt="facebook"/></a>
             <a href="#"><img src="./Icons/instagram.svg" alt="instagram"/></a>
-            <a href="#"><img src="./Icons/twitter.svg" alt="twitter"/></a>
+            <a href="#"><img src="./Icons/x.svg" alt="x"/></a>
             <a href="#"><img src="./Icons/youtube.svg" alt="youtube"/></a>
         </section>
     </footer>
